# SPDX-FileCopyrightText: Copyright (c) The helly25/mbo authors (helly25.com)
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

package(default_visibility = ["//visibility:private"])

cc_library(
    name = "matchers_cc",
    hdrs = ["matchers.h"],
    deps = [
        "@com_google_absl//absl/strings",
        "@com_google_googletest//:gtest",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "runfiles_dir_cc",
    srcs = ["runfiles_dir.cc"],
    hdrs = ["runfiles_dir.h"],
    deps = [
        "//mbo/file:file_cc",
        "@com_google_absl//absl/log:absl_check",
        "@com_google_absl//absl/status:status",
        "@com_google_absl//absl/status:statusor",
        "@bazel_tools//tools/cpp/runfiles",
    ],
    testonly = True,
    visibility = ["//visibility:public"],
)

cc_library(
    name = "status_cc",
    hdrs = ["status.h"],
    deps = [
        "//mbo/status:status_macros_cc",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_googletest//:gtest",
    ],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "status_test",
    srcs = ["status_test.cc"],
    deps = [
        ":status_cc",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_googletest//:gtest_main",
    ],
    size = "small",
)
