package(default_visibility = ["//visibility:private"])

cc_library(
  name = "periodic_thread_cc",
  srcs = ["periodic_thread.cc"],
  hdrs = ["periodic_thread.h"],
  deps = [
    "@com_google_absl//absl/base:core_headers",
    "@com_google_absl//absl/synchronization",
    "@com_google_absl//absl/time",
  ],
)


cc_binary(
  name = "periodic",
  srcs = ["periodic_main.cc"],
  deps = [
    ":periodic_thread_cc",
    "@com_google_absl//absl/strings:str_format",
    "@com_google_absl//absl/time",
  ],
)