# SPDX-FileCopyrightText: Copyright (c) The helly25 authors (helly25.com)
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc:defs.bzl", "cc_library")

package(
    default_visibility = ["//mbo/diff:__pkg__"],
    features = [
        "layering_check",
        "parse_headers",
    ],
)

cc_library(
    name = "diff_direct_cc",
    srcs = ["diff_direct.cc"],
    hdrs = ["diff_direct.h"],
    deps = [
        "//mbo/diff:chunked_diff_cc",
        "//mbo/diff:diff_options_cc",
        "//mbo/file:artefact_cc",
        "@abseil-cpp//absl/status:statusor",
    ],
)

cc_library(
    name = "diff_unified_cc",
    srcs = ["diff_unified.cc"],
    hdrs = ["diff_unified.h"],
    deps = [
        "//mbo/diff:chunked_diff_cc",
        "//mbo/diff:diff_options_cc",
        "//mbo/file:artefact_cc",
        "//mbo/types:no_destruct_cc",
        "@abseil-cpp//absl/log:absl_log",
        "@abseil-cpp//absl/status:statusor",
    ],
)
