# Copyright 2023 M.Boerger
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("//mbo/diff:diff.bzl", "diff_test")

package(default_visibility = ["//visibility:private"])

diff_test(
    name = "diff_equal_test",
    file_old = "abc.txt",
    file_new = "abc.txt",
)

diff_test(
    name = "diff_comments_equal_test",
    file_old = "abc.txt",
    file_new = "abc_comments.txt",
    strip_comments = '#',
)

genrule(
    name = "diff_abc_axc",
    srcs = [
        "abc.txt",
        "axc.txt",
    ],
    outs = ["abc_axc.test.txt"],
    tools = ["//mbo/diff:unified_diff"],
    cmd = """
        $(location //mbo/diff:unified_diff) --skip_time \\
            $(location abc.txt) $(location axc.txt) > $@ \\
            || true
    """,
)

genrule(
    name = "diff_abc_axc_comments",
    srcs = [
        "abc.txt",
        "axc_comments.txt",
    ],
    outs = ["abc_axc_comments.test.txt"],
    tools = ["//mbo/diff:unified_diff"],
    cmd = """
        $(location //mbo/diff:unified_diff) --skip_time \\
            $(location abc.txt) $(location axc_comments.txt) > $@ \\
            || true
    """,
)

genrule(
    name = "diff_abc_axc_comments_stripped",
    srcs = [
        "abc.txt",
        "axc_comments.txt",
    ],
    outs = ["abc_axc_comments_stripped.test.txt"],
    tools = ["//mbo/diff:unified_diff"],
    cmd = """
        $(location //mbo/diff:unified_diff) --skip_time \\
            $(location abc.txt) $(location axc_comments.txt) > $@ \\
            --strip_comments='#' \\
            || true
    """,
)

diff_test(
    name = "diff_abc_axc_test",
    file_old = "abc_axc.diff.txt",
    file_new = "abc_axc.test.txt",
)

diff_test(
    name = "diff_abc_axc_comments_test",
    file_old = "abc_axc_comments.diff.txt",
    file_new = "abc_axc_comments.test.txt",
)

diff_test(
    name = "diff_abc_axc_comments_stripped_test",
    file_old = "abc_axc_comments_stripped.diff.txt",
    file_new = "abc_axc_comments_stripped.test.txt",
)
