# Copyright 2023 M.Boerger
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("//mbo/diff:diff.bzl", "diff_test", "diff_test_test")

package(default_visibility = ["//visibility:private"])

diff_test(
    name = "diff_equal_test",
    file_old = "abc.txt",
    file_new = "abc.txt",
)

diff_test_test(
    name = "abc_axc_diff_test",
    expected_diff = "abc_axc.diff.txt",
    file_old = "abc.txt",
    file_new = "axc.txt",
)

diff_test(
    name = "abc_comments_equal_test",
    file_old = "abc.txt",
    file_new = "abc_comments.txt",
    strip_comments = '#',
)

diff_test_test(
    name = "abc_axc_comments_diff_test",
    expected_diff = "abc_axc_comments.diff.txt",
    file_old = "abc.txt",
    file_new = "axc_comments.txt",
)

diff_test_test(
    name = "abc_axc_comments_stripped_diff_test",
    expected_diff = "abc_axc_comments_stripped.diff.txt",
    file_old = "abc.txt",
    file_new = "axc_comments.txt",
    strip_comments = "#",
)

diff_test(
    name = "abc_ignore_case_diff_test",
    file_old = "abc.txt",
    file_new = "abc_caps.txt",
    ignore_case = True,
)

diff_test_test(
    name = "abc_caps_diff_test",
    expected_diff = "abc_caps.diff.txt",
    file_old = "abc.txt",
    file_new = "abc_caps.txt",
)

diff_test(
    name = "abc_ignore_space_change_diff_test",
    file_old = "abc.txt",
    file_new = "abc_whitespace.txt",
    ignore_space_change = True,
)

diff_test_test(
    name = "abc_whitespace_diff_test",
    expected_diff = "abc_whitespace.diff.txt",
    file_old = "abc.txt",
    file_new = "abc_whitespace.txt",
)