# SPDX-FileCopyrightText: Copyright (c) The helly25/mbo authors (helly25.com)
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(default_visibility = ["//visibility:private"])

cc_library(
    name = "ini_file_cc",
    srcs = ["ini_file.cc"],
    hdrs = ["ini_file.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//mbo/file:file_cc",
        "//mbo/status:status_macros_cc",
        "@com_google_absl//absl/container:btree",
        "@com_google_absl//absl/log:absl_log",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
    ],
)

cc_test(
    name = "ini_file_test",
    srcs = ["ini_file_test.cc"],
    data = glob([
        "tests/*.golden",
        "tests/*.ini",
    ]),
    deps = [
        "ini_file_cc",
        "//mbo/diff:unified_diff_cc",
        "//mbo/file:artefact_cc",
        "//mbo/file:file_cc",
        "//mbo/testing:runfiles_dir_cc",
        "//mbo/testing:status_cc",
        "@com_google_absl//absl/log:initialize",
        "@com_google_googletest//:gtest_main",
    ],
)
