# SPDX-FileCopyrightText: Copyright (c) The helly25 authors (helly25.com)
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Separate DEV-ONLY module for the mbo/hash measurement tooling. It is listed in
# the repository-root .bazelignore, so it is never part of the `helly25_mbo`
# module, its //... target universe, or any published/BCR offering. This keeps
# measurement/plotting dev dependencies out of the library's dependency closure.
#
# The report script (hash_benchmark_report.py) is pure Python standard library
# and needs no bazel to run; it shells out to `bazel run //mbo/hash:hash_benchmark`
# from the repository root. This module exists to host any future measurement
# dependencies in isolation. See README.md.

module(
    name = "helly25_mbo_hash_measurements",
    version = "0.0.0",
)
